--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <div class="location__header">
         <p class="section-eyebrow">Prime Location</p>
         <h2 class="section-title">Location Highlights</h2>
-        <p class="section-subtitle">Strategically located in Boduppal, the heart of the city with excellent connectivity</p>
+        <p class="section-subtitle">Strategically located in Boduppal- buddha nagar, the heart of the city with excellent connectivity</p>
       </div>
 
       <div class="location__map-wrap">
@@ -250,7 +250,7 @@
                 </span>
                 <div>
                   <p class="contact__item-label">Address</p>
-                  <p class="contact__item-value">Boduppal, budha nagar, Hyderabad</p>
+                  <p class="contact__item-value">Boduppal, buddha nagar, Hyderabad</p>
                 </div>
               </li>
               <li class="contact__item">
@@ -286,3 +286,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
